--- a/aula_06/index.html
+++ b/aula_06/index.html
@@ -8,8 +8,8 @@
 <body>
     <nav style="width: 30%;"><ul id="endpoints"></ul></nav>
     <div style="width: 60%;">
-    <div id="items" style="width:100%; display: flex;"></div>
-    <button type="button" id="prevlous">Anterior</button>
+    <div id="items" style="width:100%; display: flex; justify-content: space-around; flex-wrap: wrap;"></div>
+    <button type="button" id="previous">Anterior</button>
     <button type="button" id="next">Proximo</button>
     </div>
     <script type="text/javaScript" src="assets/js/requisicoes.js"></script>
